# stock_quant_system

./: .gitignore  README.md  __init__.py  app.py  demo_script.md  pyproject.toml  requirements.txt  启动系统.bat  量化交易系统架构汇报.pptx
agent/: __init__.py  auto_optimizer.py  chat_agent.py  market_regime.py  quant_agent.py  report_generator.py  strategy_selector.py
backtest/: __init__.py  base.py  metrics.py  result.py  slippage.py  vectorbt_engine.py
config/: settings.py  symbols.py
data/: akshare_source.py  baostock_source.py  base.py  cache_manager.py  data_cleaner.py
examples/: generate_ppt.py  run_factor_demo.py  run_grid_search.py  run_live_stub.py  run_overfitting_check.py  run_single_backtest.py  sql_analyzer_demo.sql
factors/: __init__.py  base.py  momentum.py  registry.py  technical.py  volatility.py
live/: __init__.py
optimization/: __init__.py  grid_search.py  overfitting.py  sensitivity.py
portfolio/: __init__.py  atr_sizing.py  base.py  daily_loss_limit.py  fixed_sizing.py  kelly_sizing.py  risk_manager.py  stop_loss.py  trailing_stop.py
prediction/: __init__.py  base.py  ensemble.py  evaluation.py  features.py  models.py
signals/: __init__.py  base.py  filter_chain.py  mean_reversion.py  multi_factor_scorer.py  trend_following.py
tests/: test_e2e.py  test_import_only.py  test_quick.py
utils/: exceptions.py  logger.py
visualization/: dashboard.py  drawdown.py  equity_curve.py  pnl_histogram.py  signal_scatter.py  trades.py
