[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-quant-system"
version = "1.0.0"
description = "A股量化交易系统 — 模块化架构 | AI Agent 智能分析 | 对话式交互 | 完整回测链路"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "akshare>=1.14.0",
    "yfinance>=0.2.30",
    "baostock>=0.8.8",
    "streamlit>=1.58.0",
    "pyarrow>=14.0.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-pptx>=0.6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
stock-quant = "stock_quant_system.app:main"

[tool.setuptools.packages.find]
include = ["stock_quant_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
